--- a/index.html
+++ b/index.html
@@ -4,9 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
 <body>
     <h1>Hello Ladies and Gents</h1>
-</body>
+    <section class="">
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-home"></i>
+                        <span>About</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-home"></i>
+                        <span>Projects</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-home"></i>
+                        <span>Skills</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-home"></i>
+                        <span>Experience</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <main>
+            <header>
+            <span>&#124;</span>
+            <a href="">Resume</a>
+            <a href="">Hire Me</a>
+            <a href="">
+                <label for="">
+                    <i class="fa-solid fa-moon"></i><i class="fa-regular fa-moon"></i>
+                </label>
+            </a>
+            </header>
+        </main>
+    </section>
+    </body>
+
 </html>
