--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 </head>
 <body>
-    <h1>Hello Ladies and Gents</h1>
     <section class="">
+        <input type="checkbox" id="open" class="checkbox-nav"/>
+        <label for="open" class="toggle-nav"
+        ><i class="fa fa-bars"></i>
+        <i class="fa fa-times"></i>
+    </label>
         <nav>
             <ul>
                 <li>
