--- a/index.html
+++ b/index.html
@@ -31,19 +31,19 @@
                 </li>
                 <li>
                     <a href="#">
-                        <i class="fa fa-home"></i>
+                        <i class="fa fa-file-text"></i>
                         <span>Projects</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="fa fa-home"></i>
+                        <i class="fa fa-clipboard"></i>
                         <span>Skills</span>
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <i class="fa fa-home"></i>
+                        <i class="fa fa-info-circle"></i>
                         <span>Experience</span>
                     </a>
                 </li>
@@ -60,6 +60,20 @@
                 </label>
             </a>
             </header>
+            <div class="main-content">
+                <div class="banner">
+                    <div class="content">
+                        <div class="titles">
+                            <h3>Hi there </h3>
+                            <h1> I'm Fatima</h1>
+                        </div>
+                        <p>
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias dolorum numquam ab quasi eius, consequuntur iusto nihil alias libero dignissimos sint, quisquam omnis! Reprehenderit repellendus dolorem expedita? Necessitatibus, quis vero.
+                        </p>
+                    </div>
+                    <img src="images/undraw_programmer_re_owql.svg" alt=""/>
+                </div>
+            </div>
         </main>
     </section>
     </body>
