styled projrct section

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </nav>
         <main>
             <header>
-            <span>&#124;</span>
+               <span>&#124;</span>
             <a href="">Resume</a>
             <a href="">Hire Me</a>
             <a href="">
@@ -64,14 +64,107 @@
                 <div class="banner">
                     <div class="content">
                         <div class="titles">
-                            <h3>Hi there </h3>
+                            <h3>Hi there👋</h3>
                             <h1> I'm Fatima</h1>
                         </div>
                         <p>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias dolorum numquam ab quasi eius, consequuntur iusto nihil alias libero dignissimos sint, quisquam omnis! Reprehenderit repellendus dolorem expedita? Necessitatibus, quis vero.
+                            I am a tech enthusiast and a developer at Faalen Technologies. I have always been passoniate abiut technology and its applications, with special focud on applications in the agricultural, health and commercial sectors. I LOVE OPEN SOURCE🙂
                         </p>
                     </div>
                     <img src="images/undraw_programmer_re_owql.svg" alt=""/>
+                </div>
+                <p> Scroll Down For More</p>
+                <div class="projects">
+                    <ul>
+                        <li>
+                            <h3>Digital Signature App</h3>
+                            <p> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet dolorum minima magnam, accusamus laboriosam id nesciunt velit distinctio! Maiores excepturi officia minus tempore. Earum reprehenderit aut tempora obcaecati odio eum?</p>
+                            <div class="stacks">
+                                <i class="fa-brands fa-node-js"></i>
+                                <i class="fa-brands fa-node"></i>
+                                <i class="fa-brands fa-react"></i> 
+                            </div>
+                            <div class="btns">
+                                <a href="#">
+                                    <botton>
+                                    View 
+                                    <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                    </botton>
+                                </a>
+                                <a href="#"><button>Githubs</button></a>
+                            </div>
+                            <li>
+                                <h3>Discover Gambia</h3>
+                                <p>
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae odio magni aut beatae nam nulla neque? Deserunt magnam provident hic pariatur inventore aliquam, fugiat cumque in itaque non rerum nulla!
+                                </p>
+                                <div class="stacks">
+                                    <i class="fa-brands fa-node-js"></i>
+                                    <i class="fa-brands fa-node"></i>
+                                    <i class="fa-brands fa-react"></i>
+                                </div>
+                                <div class="btns">
+                                    <a href="#">
+                                        <button>
+                                            View
+                                            <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                                        </button>
+                                    </a>
+                                    <a href="#">
+                                        <button>Github <i class="fa-brands fa-github"></i></button>
+                                    </a>
+                                </div>
+                            </li>
+                            <li>
+                                <h3>Skills.gm App</h3>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Voluptatum, alias.
+                </p>
+                <div class="stacks">
+                  <i class="fa-brands fa-node-js"></i>
+                  <i class="fa-brands fa-node"></i>
+                  <i class="fa-brands fa-react"></i>
+                </div>
+                <div class="btns">
+                  <a href="#"
+                    ><button>
+                      View
+                      <i
+                        class="fa-solid fa-arrow-up-right-from-square"
+                      ></i></button
+                  ></a>
+                  <a href="#"
+                    ><button>Github <i class="fa-brands fa-github"></i></button
+                  ></a>
+                </div>
+                            </li>
+                            <li>
+                                <h3>Teachers Attendance System</h3>
+                <p>
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                  Voluptatum, alias.
+                </p>
+                <div class="stacks">
+                  <i class="fa-brands fa-node-js"></i>
+                  <i class="fa-brands fa-node"></i>
+                  <i class="fa-brands fa-react"></i>
+                </div>
+                <div class="btns">
+                  <a href="#"
+                    ><button>
+                      View
+                      <i
+                        class="fa-solid fa-arrow-up-right-from-square"
+                      ></i></button
+                  ></a>
+                  <a href="#"
+                    ><button>Github <i class="fa-brands fa-github"></i></button
+                  ></a>
+                </div>
+                            </li>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </main>
